--- a/client/views/partials/admin/services/gpsAccounts.html
+++ b/client/views/partials/admin/services/gpsAccounts.html
@@ -4,9 +4,9 @@
         <li class="pull-right col-xs-3">
             <select class="form-control" ng-model="sortableString" ng-change="init()">
                 <option selected value="">Select</option>
-                <option value="">Trucks</option>
-                <option value="">Non Trucks</option>
-                <option value="">Both</option>
+                <option value="Trucks">Trucks</option>
+                <option value="Non Trucks">Non Trucks</option>
+                <option value="Both">Both</option>
                 <option value="smsEnabled">SMS Enabled</option>
                 <option value="smsDisabled">SMS Disabled</option>
                 <option value="statusEnabled">Status Enabled</option>
