login and truck api changed

--- a/client/views/index.html
+++ b/client/views/index.html
@@ -59,8 +59,8 @@
                         <span class="caret"></span></a>
                     <ul class="dropdown-menu">
                         <li><a href="#" ui-sref="myProfile">My Profile</a></li>
-                        <li><a href="#" ng-show="type==='account'" ui-sref="myGroup">My Groups</a></li>
-                        <li><a href="#" ng-show="type==='account'" ui-sref="addGroup">Add Group</a></li>
+                        <li><a href="#" ng-show="createGroup" ui-sref="myGroup">My Groups</a></li>
+                        <li><a href="#" ng-show="createGroup" ui-sref="addGroup">Add Group</a></li>
                         <li><a href="#" ng-click="logout()">Logout</a></li>
 
                     </ul>
