--- a/client/views/partials/trucks/trucks-edit.html
+++ b/client/views/partials/trucks/trucks-edit.html
@@ -11,16 +11,30 @@
             </div>
             <div class="form-group col-xs-12">
                 <div class="col-xs-12 styling-input-list">
-                    <input type="text" class="form-control custom-form-control" ng-model="truck.truckType"/>
-                    <label class="focus-effect-for-input" aria-hidden="true">Truck Type</label>
+                    <ui-select ng-model="truck.truckType" theme="select2"
+                               style="min-width: 390px;"
+                               title="Choose a Truck" append-to-body="true">
+                        <ui-select-match placeholder="Select a Truck*" class="form-control custom-form-control">
+                            {{$select.selected.title || title}} , {{$select.selected.tonnes || tonnes}} Tonnes
+                        </ui-select-match>
+                        <ui-select-choices
+                                repeat="truck in truckTypesList | propsFilter: {title: $select.search}">
+                            <b>
+                                <div ng-bind-html="truck.title | highlight: $select.search"></div>
+                            </b>
+                            <small>
+                                Tones: {{truck.tonnes || '---'}}
+                            </small>
+                        </ui-select-choices>
+                    </ui-select>
                 </div>
             </div>
-            <div class="form-group col-xs-12">
+           <!-- <div class="form-group col-xs-12">
                 <div class="col-xs-12 styling-input-list">
                     <input type="text" class="form-control custom-form-control" ng-model="truck.tonnage"/>
                     <label class="focus-effect-for-input" aria-hidden="true">Tonnage</label>
                 </div>
-            </div>
+            </div>-->
             <div class="form-group col-xs-12">
                 <div class="col-xs-12 styling-input-list">
                     <input type="text" class="form-control custom-form-control" ng-model="truck.modelAndYear"/>
