--- a/client/views/partials/admin/orderProcess/truckRequets.html
+++ b/client/views/partials/admin/orderProcess/truckRequets.html
@@ -4,7 +4,7 @@
         <li class="pull-right">
             <button class="btn btn-primary" ui-sref="orderprocess.createTruckRequest">Create New</button>
         </li>
-        <li class="pull-right col-xs-2">
+        <li class="pull-right col-xs-3">
             <select class="form-control">
                 <option>Select</option>
                 <option>Qualified</option>
@@ -17,9 +17,21 @@
                 <option>Not Interested</option>
             </select>
         </li>
+        <li class="pull-right col-xs-4">
+            <form role="search">
+                <div class="input-group add-on">
+                    <input type="text" class="form-control" placeholder="Search" name="srch-term" id="srch-term">
+                    <div class="input-group-btn">
+                        <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i>
+                        </button>
+                    </div>
+                </div>
+            </form>
+        </li>
+        <div class="clearfix"></div>
     </ul>
-    <div class="clearfix"></div>
-    <table class="table table-bordered table-striped table-condensed table-hover mt-20 text-center"
+
+    <table class="table table-bordered table-striped table-condensed table-hover text-center"
            ng-table="requestTruckParams">
         <tbody>
         <tr ng-repeat="truck in truckRequestsList">
