--- a/client/views/partials/admin/orderProcess/viewOrder.html
+++ b/client/views/partials/admin/orderProcess/viewOrder.html
@@ -1,1 +1,33 @@
-View Orders
+<div ng-controller="viewOrderCntrl">
+    <ul class="list-inline title-ul">
+        <li class="pull-left name-head">View Orders</li>
+        <li class="pull-right">
+            <button class="btn btn-primary" ui-sref="orderprocess.createLoadRequest">Create New</button>
+        </li>
+        <li class="pull-right col-xs-3">
+            <select class="form-control">
+                <option>Select</option>
+                <option>Qualified</option>
+                <option>Request for Approval</option>
+                <option>Initiate</option>
+                <option>Callback</option>
+                <option>Duplicate</option>
+                <option>Junk Lead</option>
+                <option>Language Barrier</option>
+                <option>Not Interested</option>
+            </select>
+        </li>
+        <li class="pull-right col-xs-4">
+            <form role="search">
+                <div class="input-group add-on">
+                    <input type="text" class="form-control" placeholder="Search" name="srch-term" id="srch-term">
+                    <div class="input-group-btn">
+                        <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i>
+                        </button>
+                    </div>
+                </div>
+            </form>
+        </li>
+        <div class="clearfix"></div>
+    </ul>
+</div>
