--- a/client/views/partials/admin/orderProcess/viewOrder.html
+++ b/client/views/partials/admin/orderProcess/viewOrder.html
@@ -1,8 +1,8 @@
-<div ng-controller="viewOrderCntrl">
+<div ng-controller="viewOrderCtrl">
     <ul class="list-inline title-ul">
         <li class="pull-left name-head">View Orders</li>
         <li class="pull-right">
-            <button class="btn btn-primary" ui-sref="orderprocess.createLoadRequest">Create New</button>
+            <button class="btn btn-primary" ui-sref="orderprocess.editOrderRequest">Create New</button>
         </li>
         <li class="pull-right col-xs-3">
             <select class="form-control">
@@ -30,4 +30,33 @@
         </li>
         <div class="clearfix"></div>
     </ul>
+    <div class="">
+        <table class="table table-bordered table-striped table-condensed table-hover text-center"
+               ng-table="requestLoadParams">
+            <tbody>
+            <tr>
+                <td data-title="'S.No'" class="clickable-item"></td>
+                <td data-title="'Order Id'" sortable="'orderId'" class="clickable-item"></td>
+                <td data-title="'Created By'" sortable="'createdBy'" class="clickable-item"></td>
+                <td data-title="'Date Ordered'" sortable="'dateOrdered'" class="clickable-item"></td>
+                <td data-title="'Date Created'" sortable="'dateCreated'" class="clickable-item"></td>
+                <td data-title="'Source'" sortable="'source'" class="clickable-item"></td>
+                <td data-title="'Destination'" sortable="'destination'" class="clickable-item"></td>
+                <td data-title="'Amount'" sortable="'amount'" class="clickable-item"></td>
+                <td data-title="'Status'" sortable="'status'" class="clickable-item"></td>
+                <td data-title="'Action'">
+                    <a href="#" ui-sref="orderprocess.editLoadRequest({loadRequestId:load._id})" class="edit_icon">
+                        <span class="glyphicon glyphicon-pencil"></span>
+                    </a>
+                    <a href="#" ng-click="deleteLoadRequest(load._id)" class="delete_icon">
+                        <span class="glyphicon glyphicon-trash"></span>
+                    </a>
+                </td>
+            </tr>
+            <tr ng-if="!currentPageOfLoadRequests || currentPageOfLoadRequests.length === 0">
+                <td colspan="8">No Loads exist.</td>
+            </tr>
+            </tbody>
+        </table>
+    </div>
 </div>
