Load Request Updation

--- a/client/views/partials/admin/orderProcess/loadRequest.html
+++ b/client/views/partials/admin/orderProcess/loadRequest.html
@@ -31,7 +31,7 @@
         <div class="clearfix"></div>
     </ul>
     <table class="table table-bordered table-striped table-condensed table-hover text-center"
-           ng-table="requestLoadParams">
+           ng-table="loadRequestParams">
         <tbody>
         <tr ng-repeat="load in currentPageOfLoadRequests">
             <!--<td data-title="'S No'" class="col-sm-1">{{$index+1}}</td>-->
@@ -39,22 +39,22 @@
                 {{$index+1}}
             </td>
             <td data-title="'Customer Name'" sortable="'firstName'" class="clickable-item col-sm-1">
-                {{load.firstName}}
+                {{load.firstName || '--'}}
             </td>
-            <td data-title="'mobile'" sortable="'contactPhone'" class="clickable-item col-sm-1">{{load.contactPhone}}
+            <td data-title="'mobile'" sortable="'contactPhone'" class="clickable-item col-sm-1">{{load.contactPhone || '--'}}
             </td>
             <td data-title="'Truck No'" sortable="'registrationNo'" class="clickable-item col-sm-1">
-                {{load.registrationNo}}
+                {{load.registrationNo || '--'}}
             </td>
-            <td data-title="'Make Year'" sortable="'makeYear'" class="clickable-item col-sm-1">{{load.makeYear}}</td>
+            <td data-title="'Make Year'" sortable="'makeYear'" class="clickable-item col-sm-1">{{load.makeYear || '--'}}</td>
             <td data-title="'Source'" sortable="'sourceAddress'" class="clickable-item col-sm-1">
-                {{load.sourceAddress}}
+                {{load.sourceAddress || '--'}}
             </td>
             <td data-title="'Destination / Price'" sortable="'destinationAddress'" class="clickable-item col-sm-1">
-                <span ng-repeat="destination in load.destination">{{destination.destinationAddress}} / Rs.{{destination.price}}<br/></span>
+                <span ng-repeat="destination in load.destination">{{destination.destinationAddress || '--'}} / Rs.{{destination.price || '--'}}<br/></span>
             </td>
             <td data-title="'Date'" sortable="'dateAvailable'" class="clickable-item col-sm-1">{{load.dateAvailable |
-                date:'dd-MM-yyyy'}}
+                date:'dd-MM-yyyy' || '--'}}
             </td>
             <td data-title="'Status'" sortable="'Status'" class="clickable-item col-sm-1">{{load.status || 'NA'}}</td>
 
