--- a/client/views/partials/admin/orderProcess/viewOrder.html
+++ b/client/views/partials/admin/orderProcess/viewOrder.html
@@ -2,7 +2,7 @@
     <ul class="list-inline title-ul">
         <li class="pull-left name-head">View Orders</li>
         <li class="pull-right">
-            <button class="btn btn-primary" ui-sref="orderprocess.editOrderRequest">Create New</button>
+            <button class="btn btn-primary" ui-sref="orderprocess.newOrderRequest">Create New</button>
         </li>
         <li class="pull-right col-xs-3">
             <select class="form-control">
